--- a/service.html
+++ b/service.html
@@ -3,9 +3,10 @@
 
 <head>
     <meta charset="utf-8">
+    <link rel="icon" href="/img/waveD.png" type="image/x-icon" />
     <title>NextWave Technologies</title>
     <!-- add icon link -->
-    <link rel="icon" href="i2.png" type="image/x-icon" />
+    
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <meta content="" name="keywords">
     <meta content="" name="description">
@@ -47,12 +48,13 @@
             <div class="row gx-0 align-items-center">
                 <div class="col-lg-8 text-center text-lg-start mb-2 mb-lg-0">
                     <div class="d-flex flex-wrap">
-                        <a href="tel:+18108821776" class="text-muted small me-4"><i class="fas fa-phone-alt text-primary me-2"></i>+1(810)882-1776</a>
+                        <a href="tel:+18108821776" class="text-muted small me-4"><i class="fas fa-phone-alt text-primary me-2"></i>+1 (810)882-1776</a>
                         <a href="mailto:thenextwaveit@gmail.com" class="text-muted small me-0"><i class="fas fa-envelope text-primary me-2"></i>thenextwaveit@gmail.com</a>
                     </div>
                 </div>
                 <div class="col-lg-4 text-center text-lg-end">
                     <div class="d-inline-flex align-items-center" style="height: 45px;">
+                        <!-- 
                         <a href="#"><small class="me-3 text-dark"><i class="fa fa-user text-primary me-2"></i>Register</small></a>
                         <a href="#"><small class="me-3 text-dark"><i class="fa fa-sign-in-alt text-primary me-2"></i>Login</small></a>
                         <div class="dropdown">
@@ -64,6 +66,7 @@
                                 <a href="#" class="dropdown-item"><i class="fas fa-power-off me-2"></i> Log Out</a>
                             </div>
                         </div>
+                        -->
                     </div>
                 </div>
             </div>
@@ -74,15 +77,14 @@
         <div class="container-fluid position-relative p-0">
             <nav class="navbar navbar-expand-lg navbar-light px-4 px-lg-5 py-3 py-lg-0">
                 <a href="" class="navbar-brand p-0">
-                    <h1 class="text-primary"><i class="fas fa-wave me-3"></i>NextWave Technologies</h1>
-                    <!-- <img src="img/logo.png" alt="Logo"> -->
+                    <h1 class="text-primary"><img src="img/smWaveD.png" alt="Logo">NextWave Technologies</h1>
                 </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
                     <span class="fa fa-bars"></span>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarCollapse">
                     <div class="navbar-nav ms-auto py-0">
-                        <a href="index.html" class="nav-item nav-link">Home</a>
+                        <a href="index.html" class="nav-item nav-link ">Home</a>
                         <a href="about.html" class="nav-item nav-link">About</a>
                         <a href="service.html" class="nav-item nav-link active">Services</a>
                         <div class="nav-item dropdown">
@@ -90,14 +92,15 @@
                                 <span class="dropdown-toggle">Pages</span>
                             </a>
                             <div class="dropdown-menu m-0">
-                                <a href="feature.html" class="dropdown-item">Our Patners</a>
-                                <a href="team.html" class="dropdown-item">Our team</a>
+                                <a href="feature.html" class="dropdown-item">Our Plans</a>
+                                <a href="team.html" class="dropdown-item">Our Team</a>
+                                <a href="offer.html" class="dropdown-item">Terms of Service</a>
                                 <a href="FAQ.html" class="dropdown-item">FAQs</a>
                             </div>
                         </div>
                         <a href="contact.html" class="nav-item nav-link">Contact Us</a>
                     </div>
-                    <a href="#" class="btn btn-primary rounded-pill py-2 px-4 my-3 my-lg-0 flex-shrink-0">Get Started</a>
+                    <a href="contact.html" class="btn btn-primary rounded-pill py-2 px-4 my-3 my-lg-0 flex-shrink-0">Get Started</a>
                 </div>
             </nav>
 
@@ -248,7 +251,7 @@
         </div>
         <!-- Services End -->
 
-        <!-- Offer Start -->
+        <!-- Offer Start 
         <div class="container-fluid offer-section pb-5">
             <div class="container pb-5">
                 <div class="text-center mx-auto pb-5 wow fadeInUp" data-wow-delay="0.2s" style="max-width: 800px;">
@@ -351,7 +354,7 @@
                 </div>
             </div>
         </div>
-        <!-- Offer End -->
+        Offer End -->
 
         <!-- Testimonial Start 
         <div class="container-fluid testimonial pb-5">
@@ -500,13 +503,15 @@
                             <h4 class="text-white mb-4">Quick Links</h4>
                             <a href="/about.html"><i class="fas fa-angle-right me-2"></i> About Us</a>
                             <a href="/contact.html"><i class="fas fa-angle-right me-2"></i> Contact us</a>
+                            <a href="/service.html"><i class="fas fa-angle-right me-2"></i> Our Services</a>
+                            <a href="/feature.html"><i class="fas fa-angle-right me-2"></i> Our Plans</a>
                         </div>
                     </div>
                     <div class="col-md-6 col-lg-6 col-xl-3">
                         <div class="footer-item">
                             <h4 class="text-white mb-4">Support</h4>
-                            <a href="/testimonial.html"><i class="fas fa-angle-right me-2"></i> Terms & Conditions</a>
-                            <a href="/testimonial.html"><i class="fas fa-angle-right me-2"></i> Disclaimer</a>
+                            <a href="/offer.html"><i class="fas fa-angle-right me-2"></i> Terms & Conditions</a>
+                            <a href="/offer.html"><i class="fas fa-angle-right me-2"></i> Disclaimer</a>
                             <a href="/FAQ.html"><i class="fas fa-angle-right me-2"></i> FAQ</a>
                         </div>
                     </div>
@@ -515,7 +520,7 @@
                             <h4 class="text-white mb-4">Contact Info</h4>
                             <div class="d-flex align-items-center">
                                 <i class="fas fa-map-marker-alt text-primary me-3"></i>
-                                <p class="text-white mb-0">123 Street New York.USA</p>
+                                <p class="text-white mb-0">Michigan, USA</p>
                             </div>
                             <div class="d-flex align-items-center">
                                 <i class="fas fa-envelope text-primary me-3"></i>
