--- a/feature.html
+++ b/feature.html
@@ -120,64 +120,79 @@
         <!-- Navbar & Hero End -->
 
 
-        <!-- Features Start -->
-        <div class="container-fluid feature py-5">
-            <div class="container py-5">
+        <!-- Offer Start -->
+        <div class="container-fluid offer-section pb-5">
+            <div class="container pb-5">
                 <div class="text-center mx-auto pb-5 wow fadeInUp" data-wow-delay="0.2s" style="max-width: 800px;">
-                    <h4 class="text-primary">Our Features</h4>
-                    <h1 class="display-5 mb-4">Connecting businesses, ideas, and people for greater impact.</h1>
-                    <p class="mb-0">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Tenetur adipisci facilis cupiditate recusandae aperiam temporibus corporis itaque quis facere, numquam, ad culpa deserunt sint dolorem autem obcaecati, ipsam mollitia hic.
+                    <h4 class="text-primary">Managed Services</h4>
+                    <h1 class="display-5 mb-4">Plans We Offer</h1>
+                    <p class="mb-0">
+                        We offer comprehensive managed services that include remote monitoring and antivirus protection to 
+                        keep your systems secure. Our larger plans also feature advanced email filtering and phishing training 
+                        to help safeguard against cyber threats and ensure your team is well-prepared.
                     </p>
                 </div>
-                <div class="row g-4">
-                    <div class="col-md-6 col-lg-6 col-xl-3 wow fadeInUp" data-wow-delay="0.2s">
-                        <div class="feature-item p-4">
-                            <div class="feature-icon p-4 mb-4">
-                                <i class="fas fa-chart-line fa-4x text-primary"></i>
+                <div class="row g-5">
+                    <!-- Basic Plan -->
+                    <div class="col-md-6 wow fadeInUp" data-wow-delay="0.2s">
+                        <div class="card shadow-sm border-0">
+                            <img src="img/o11.jpg" class="card-img-top" alt="Basic Plan">
+                            <div class="card-body">
+                                <h5 class="card-title">Basic Monitoring and Protection Plan</h5>
+                                <p class="card-text">
+                                    For just $9.99 per workstation, you’ll receive remote monitoring, antivirus protection, and access to our 24/7 email support line to submit tickets for any issues.
+                                </p>
+                                <a href="service.html" class="btn btn-primary rounded-pill">Learn More</a>
                             </div>
-                            <h4>Global Management</h4>
-                            <p class="mb-4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea hic laborum odit pariatur...
-                            </p>
-                            <a class="btn btn-primary rounded-pill py-2 px-4" href="#">Learn More</a>
                         </div>
                     </div>
-                    <div class="col-md-6 col-lg-6 col-xl-3 wow fadeInUp" data-wow-delay="0.4s">
-                        <div class="feature-item p-4">
-                            <div class="feature-icon p-4 mb-4">
-                                <i class="fas fa-university fa-4x text-primary"></i>
+
+                    <!-- Plus Plan -->
+                    <div class="col-md-6 wow fadeInUp" data-wow-delay="0.4s">
+                        <div class="card shadow-sm border-0">
+                            <img src="img/o22.jpg" class="card-img-top" alt="Plus Plan">
+                            <div class="card-body">
+                                <h5 class="card-title">Plus Monitoring and Protection Plan</h5>
+                                <p class="card-text">
+                                    For $11.99 per workstation, you’ll get remote monitoring, antivirus protection, access to our 24/7 email support line, plus free user additions and removals in your environment. This plan also includes either spam email filtering or phishing training to enhance your security.
+                                </p>
+                                <a href="service.html" class="btn btn-primary rounded-pill">Learn More</a>
                             </div>
-                            <h4>Corporate Banking</h4>
-                            <p class="mb-4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea hic laborum odit pariatur...
-                            </p>
-                            <a class="btn btn-primary rounded-pill py-2 px-4" href="#">Learn More</a>
                         </div>
                     </div>
-                    <div class="col-md-6 col-lg-6 col-xl-3 wow fadeInUp" data-wow-delay="0.6s">
-                        <div class="feature-item p-4">
-                            <div class="feature-icon p-4 mb-4">
-                                <i class="fas fa-file-alt fa-4x text-primary"></i>
+
+                    <!-- Professional Plan -->
+                    <div class="col-md-6 wow fadeInUp" data-wow-delay="0.6s">
+                        <div class="card shadow-sm border-0">
+                            <img src="img/o43.jpg" class="card-img-top" alt="Professional Plan">
+                            <div class="card-body">
+                                <h5 class="card-title">Professional Monitoring and Protection Plan</h5>
+                                <p class="card-text">
+                                    For $14.99 per workstation, you’ll receive remote monitoring, antivirus protection, access to our 24/7 email support line, free user additions and removals, and both spam email filtering and phishing training. This plan also includes quarterly security audits, with an on-site visit four times a year to ensure your systems are fully optimized and secure.
+                                </p>
+                                <a href="service.html" class="btn btn-primary rounded-pill">Learn More</a>
                             </div>
-                            <h4>Asset Management</h4>
-                            <p class="mb-4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea hic laborum odit pariatur...
-                            </p>
-                            <a class="btn btn-primary rounded-pill py-2 px-4" href="#">Learn More</a>
                         </div>
                     </div>
-                    <div class="col-md-6 col-lg-6 col-xl-3 wow fadeInUp" data-wow-delay="0.8s">
-                        <div class="feature-item p-4">
-                            <div class="feature-icon p-4 mb-4">
-                                <i class="fas fa-hand-holding-usd fa-4x text-primary"></i>
+
+                    <!-- Complete Plan -->
+                    <div class="col-md-6 wow fadeInUp" data-wow-delay="0.8s">
+                        <div class="card shadow-sm border-0">
+                            <img src="img/o54.jpg" class="card-img-top" alt="Complete Plan">
+                            <div class="card-body">
+                                <h5 class="card-title">Complete Monitoring and Protection Plan</h5>
+                                <p class="card-text">
+                                    For $19.99 per workstation, you’ll get everything from our $14.99 plan—remote monitoring, antivirus protection, 24/7 email support, free user additions and removals, spam email filtering, and phishing training—plus monthly on-site visits to proactively manage and optimize your IT. This plan also includes quarterly security audits to ensure your systems remain secure and fully compliant. Additionally, all remote support is completely free, giving you peace of mind knowing help is just a call or click away.
+                                </p>
+                                <a href="service.html" class="btn btn-primary rounded-pill">Learn More</a>
                             </div>
-                            <h4>Investment Bank</h4>
-                            <p class="mb-4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea hic laborum odit pariatur...
-                            </p>
-                            <a class="btn btn-primary rounded-pill py-2 px-4" href="#">Learn More</a>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
-        <!-- Features End -->
+        <!-- Offer End -->
+
 
        <!-- Footer Start -->
        <div class="container-fluid footer py-5 wow fadeIn" data-wow-delay="0.2s">
