--- a/feature.html
+++ b/feature.html
@@ -136,7 +136,9 @@
                     <!-- Basic Plan -->
                     <div class="col-md-6 wow fadeInUp" data-wow-delay="0.2s">
                         <div class="card shadow-sm border-0">
-                            <img src="img/o11.jpg" class="card-img-top" alt="Basic Plan" style="width: 100px; height: 80px; object-fit: cover;">
+                            <div class="card-img-top d-flex justify-content-center">
+                                <img src="img/o11.jpg" alt="Basic Plan" style="width: 500px; height: 300px; object-fit: cover;">
+                            </div>
                             <div class="card-body">
                                 <h5 class="card-title">Basic Monitoring and Protection Plan</h5>
                                 <p class="card-text">
@@ -150,7 +152,9 @@
                     <!-- Plus Plan -->
                     <div class="col-md-6 wow fadeInUp" data-wow-delay="0.4s">
                         <div class="card shadow-sm border-0">
-                            <img src="img/o22.jpg" class="card-img-top" alt="Plus Plan" style="width: 100px; height: 80px; object-fit: cover;">
+                            <div class="card-img-top d-flex justify-content-center">
+                                <img src="img/o22.jpg" alt="Plus Plan" style="width: 500px; height: 300px; object-fit: cover;">
+                            </div>
                             <div class="card-body">
                                 <h5 class="card-title">Plus Monitoring and Protection Plan</h5>
                                 <p class="card-text">
@@ -164,7 +168,9 @@
                     <!-- Professional Plan -->
                     <div class="col-md-6 wow fadeInUp" data-wow-delay="0.6s">
                         <div class="card shadow-sm border-0">
-                            <img src="img/o43.jpg" class="card-img-top" alt="Professional Plan" style="width: 100px; height: 80px; object-fit: cover;">
+                            <div class="card-img-top d-flex justify-content-center">
+                                <img src="img/o43.jpg" alt="Professional Plan" style="width: 500px; height: 300px; object-fit: cover;">
+                            </div>
                             <div class="card-body">
                                 <h5 class="card-title">Professional Monitoring and Protection Plan</h5>
                                 <p class="card-text">
@@ -178,7 +184,9 @@
                     <!-- Complete Plan -->
                     <div class="col-md-6 wow fadeInUp" data-wow-delay="0.8s">
                         <div class="card shadow-sm border-0">
-                            <img src="img/o54.jpg" class="card-img-top" alt="Complete Plan" style="width: 100px; height: 80px; object-fit: cover;">
+                            <div class="card-img-top d-flex justify-content-center">
+                                <img src="img/o54.jpg" alt="Complete Plan" style="width: 500px; height: 300px; object-fit: cover;">
+                            </div>
                             <div class="card-body">
                                 <h5 class="card-title">Complete Monitoring and Protection Plan</h5>
                                 <p class="card-text">
@@ -192,6 +200,7 @@
             </div>
         </div>
         <!-- Offer End -->
+
 
 
 
