--- a/feature.html
+++ b/feature.html
@@ -146,7 +146,7 @@
                                 <p class="card-text">
                                     For just $9.99 per workstation, you’ll receive remote monitoring, antivirus protection, and access to our 24/7 email support line to submit tickets for any issues.
                                 </p>
-                                <a href="service.html" class="btn btn-primary rounded-pill">Learn More</a>
+                                <a href="basic.html" class="btn btn-primary rounded-pill">Learn More</a>
                             </div>
                         </div>
                     </div>
